--- a/package.json
+++ b/package.json
@@ -19,6 +19,17 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "@fortawesome/fontawesome-free": "^5.12.0",
+    "@ng-bootstrap/ng-bootstrap": "^2.0.0-alpha.0",
+    "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
+    "@types/chart.js": "^2.9.8",
+    "angular-bootstrap-md": "^8.8.1",
+    "animate.css": "^3.7.2",
+    "bootstrap": "^4.4.1",
+    "chart.js": "^2.5.0",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
